css/style.css
/* ... */
.process-button:hover {
  background: #019870;
}

.strategies {
  display: flex;
  text-align: center;
  padding: 50px 20px;
  border-radius: 10px;
  margin: 20px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  height: 400x;
}
.strategies-container {
  width: 90%;
  max-width: 990px;
  margin: 0 auto;
}

.strategies h2 {
  text-align: left;
  font-size: 2.5rem;
  margin-bottom: 10px;
}
.strategies-p {
  text-align: left;
}

.strategies p {
  font-size: 1.2rem;
  color: #666;
  margin-bottom: 40px;
}

.strategies-cards {
  display: flex;
  gap: 20px;
  justify-content: center;
  flex-wrap: wrap;
}

.strategies-card {
  background: #fff;
  border-radius: 10px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  max-width: 300px;
  text-align: left;
  transition: transform 0.3s;
}

.strategies-card:hover {
  transform: translateY(-5px);
}

.strategies-card img {
  width: 100%;
  height: auto;
}

.strategies-card-content {
  padding: 20px;
}

.strategies-card-content h3 {
  font-size: 1.5rem;
  color: #333;
  margin: 0 0 10px;
}

.strategies-card-content h3:hover {
  color: #007bff;
}

.strategies-card-content p {
  color: #666;
  margin: 0 0 20px;
  font-size: 0.9rem;
}
.dot {
  margin-top: 50px;
  width: 10px;
  height: 10px;
  background-color: #02897a;
  border-radius: 50%;
  display: inline-block;
}
.price {
  font-family: Arial, sans-serif;
  padding: 50px 20px;
  border-radius: 10px;
  margin: 20px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  background-color: #f4f7fa;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.price-container {
  gap: 20px;
  max-width: 1200px;
  text-align: center;
  justify-content: center;
}
.price-title {
  text-align: center;
  margin-bottom: 90px;
}

.price-title h1 {
  font-size: 2em;
  color: #333;
  margin: 0;
}

.price-title p {
  font-size: 1em;
  color: #666;
  margin: 5px 0 40px;
}

.price-cards {
  display: inline-block;
  gap: 20px;
  flex-wrap: wrap;

  background: #fff;
  border-radius: 8px;
  box-shadow: 0 8px 6px rgba(0, 0, 0, 0.1);
  overflow: hidden;
  padding: 20px;
  text-align: center;
  width: 300px;
  transition: 0.3s;
}
.price-cards:hover {
  background: #006d5b;
  color: #fff;
}

.price-cards h3 {
  margin: 0 0 10px;
  font-size: 1.5em;
}

.price-cards p {
  font-size: 1em;
  margin: 10px 0;
}

.price-card {
  font-size: 3em;
  margin: 15px 0;
  color: inherit;
}
.cost {
  font-size: 2.7em;
}

.price-features {
  margin: 20px 0;
  padding: 0;
}

.price-features li {
  list-style: none;
  margin: 5px 0;
}

.price-cards button {
  background: #007b65;
  color: #fff;
  border: none;
  padding: 10px 20px;
  border-radius: 4px;
  font-size: 1em;
  cursor: pointer;
  transition: background 0.3s ease;
}

.price-cards button:hover {
  background: #fff;
  color: #006d5b;
}

.comments {
  padding: 50px 20px;
  border-radius: 10px;
  margin: 20px;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  background-color: #f4f7fa;
  display: flex;

  flex-direction: column;
  align-items: center;
}
.comments-container {
  gap: 40px;
  max-width: 2000px;
  text-align: center;
  justify-content: center;
}

.commentator {
  display: inline-block;
  background-color: #f4f4f4;
  border: 1px solid #ddd;
  border-radius: 10px;
  padding: 30px;
  max-width: 300px;
  text-align: left;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}

.commentator-text {
  font-size: 14px;
  margin-bottom: 20px;
  color: #555;
}
.commentator-avatar {
  display: flex;
  text-align: left;
  align-items: center;
  gap: 5px;
}
.commentator-img {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  border: 2px solid #ddd;
}
.commentator-name {
  display: flex;
  flex-direction: column-reverse;
}
.commentator-avatar h4 {
  color: #006d5b;
  font-size: 16px;
  margin: 0;
}
.commentator-avatar p {
  font-size: 12px;
  color: #999;
  margin: 0;
}
.stars {
  display: flex;
  color: yellow;
  font-size: 1.5em;
}

.banner {
  height: auto;
  font-family: "Montserrat", serif;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: #009688;
  margin-top: 80px;
  margin-left: 269px;
  border-radius: 30px;
  padding: 30px 30px;
  width: 80%;
  max-width: 900px;
  color: #fff;
  text-align: left;
}

.banner-container {
  max-width: 60%;
}

.banner-content h1 {
  font-size: 30px;
  line-height: 1.5;
  margin: 0 0 15px;
}

.banner-button {
  background-color: #fff;
  color: #009688;
  border: none;
  border-radius: 5px;
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
  transition: transform 0.9s;
}

.banner-button:hover {
  background-color: #00796b;
  color: #fff;
}

.banner-img {
  display: flex;
  gap: 10px;
}

.banner-img img {
  width: 100%;
  height: auto;
  border-radius: 5px;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
}
footer {
  background-color: #f9f9f9;
  padding: 40px 20px;
  font-family: Arial, sans-serif;
  justify-content: center;
}

.footer-container {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.footer-logo {
  margin-left: 251px;
  min-width: 200px;
}

.footer-logo h2 {
  text-decoration: none;
  color: #062d5b;
  margin-bottom: 10px;
}
.footer-logo-img {
  display: flex;
}

.social-icons a {
  margin-right: 10px;
}

.social-icons img {
  width: 24px;
  height: 24px;
}

.footer-links {
  display: flex;

  gap: 129px;
  justify-content: space-between;
  min-width: 200px;
}

.footer-links h3 {
  margin-bottom: 10px;
  color: #062d5b;
}

.footer-links ul {
  list-style: none;
  padding: 0;
}

.footer-links ul li {
  margin-bottom: 5px;
}

.footer-links ul li a {
  text-decoration: none;
  color: #333;
}

.footer-links ul li a:hover {
  text-decoration: underline;
}

.footer-subscription {
  min-width: 100px;
  margin-right: 200px;
}

.footer-subscription p {
  margin-bottom: 10px;
}

.footer-subscription form {
  display: flex;
  gap: 10px;
}

.footer-subscription input {
  padding: 8px;
  border: 1px solid #ccc;
  border-radius: 4px;
}
/* ... */

